--- a/prometheus-kubernetes.yml
+++ b/prometheus-kubernetes.yml
@@ -42,7 +42,7 @@ data:
         - action: labelmap
           regex: __meta_kubernetes_node_label_(.+)
         - target_label: __address__
-          replacement: kubernetes.default.svc:443
+          replacement: kubernetes.default:443
         - source_labels: [__meta_kubernetes_node_name]
           regex: (.+)
           target_label: __metrics_path__
@@ -91,7 +91,7 @@ data:
         - action: labelmap
           regex: __meta_kubernetes_node_label_(.+)
         - target_label: __address__
-          replacement: kubernetes.default.svc:443
+          replacement: kubernetes.default:443
         - source_labels: [__meta_kubernetes_node_name]
           regex: (.+)
           target_label: __metrics_path__
